--- a/QOBDManagement/QOBD/Views/MainChatRoomWindow.xaml
+++ b/QOBDManagement/QOBD/Views/MainChatRoomWindow.xaml
@@ -14,7 +14,7 @@
              xmlns:local="clr-namespace:QOBD"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             Height="470" Width="525" Unloaded="MainChatRoom_Unloaded">
+             Height="470" Width="525" Loaded="MainChatRoom_loaded">
     <UserControl.Resources>
 
 
@@ -69,99 +69,101 @@
                                   HorizontalAlignment="Right" Margin="10" Foreground="{Binding Foreground, ElementName=btnAccountIcon}"
                                   IsChecked="{Binding ElementName=MenuToggleButton, Path=IsChecked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </Grid>
-                            <StackPanel Orientation="Vertical">
-                                <DataGrid Name="dgUserList" AutoGenerateColumns="False"  ItemsSource="{Binding DiscussionViewModel.ChatAgentModelList, UpdateSourceTrigger=PropertyChanged}"
+                            <ScrollViewer VerticalScrollBarVisibility="Visible">
+                                <StackPanel Orientation="Vertical">
+                                    <DataGrid Name="dgUserList" AutoGenerateColumns="False"  ItemsSource="{Binding DiscussionViewModel.ChatAgentModelList, UpdateSourceTrigger=PropertyChanged}"
                                   CanUserAddRows="False" SelectedValue="{Binding DiscussionViewModel.ChatAgentModelSelectedFromAgentList, UpdateSourceTrigger=PropertyChanged}">
-                                    <DataGrid.RowStyle>
-                                        <Style TargetType="DataGridRow">
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding IsOnline}" Value="True">
-                                                    <Setter Property="Background" Value="Beige"/>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </DataGrid.RowStyle>
-                                    <DataGrid.Columns>
-                                        <DataGridTemplateColumn>
-                                            <DataGridTemplateColumn.CellTemplate>
-                                                <DataTemplate>
-                                                    <StackPanel>
-                                                        <Grid Margin="0 0 0 5">
-                                                            <Grid.ColumnDefinitions>
-                                                                <ColumnDefinition Width="35"/>
-                                                                <ColumnDefinition Width="2*"/>
-                                                                <ColumnDefinition Width="*"/>
-                                                            </Grid.ColumnDefinitions>
-                                                            <Border CornerRadius="5" Background="{Binding TxtIconColour}" Width="30">
-                                                                <Image Source="{Binding Image.ImageSource, UpdateSourceTrigger=PropertyChanged}" />
-                                                            </Border>
-                                                            <Button Grid.Column="1" Style="{DynamicResource MaterialDesignFlatButton}"
+                                        <DataGrid.RowStyle>
+                                            <Style TargetType="DataGridRow">
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding IsOnline}" Value="True">
+                                                        <Setter Property="Background" Value="Beige"/>
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </DataGrid.RowStyle>
+                                        <DataGrid.Columns>
+                                            <DataGridTemplateColumn>
+                                                <DataGridTemplateColumn.CellTemplate>
+                                                    <DataTemplate>
+                                                        <StackPanel>
+                                                            <Grid Margin="0 0 0 5">
+                                                                <Grid.ColumnDefinitions>
+                                                                    <ColumnDefinition Width="35"/>
+                                                                    <ColumnDefinition Width="2*"/>
+                                                                    <ColumnDefinition Width="*"/>
+                                                                </Grid.ColumnDefinitions>
+                                                                <Border CornerRadius="5" Background="{Binding TxtIconColour}" Width="30">
+                                                                    <Image Source="{Binding Image.ImageSource, UpdateSourceTrigger=PropertyChanged}" />
+                                                                </Border>
+                                                                <Button Grid.Column="1" Style="{DynamicResource MaterialDesignFlatButton}"
                                                                 CommandParameter="{Binding}">
-                                                                <Button.Command>
-                                                                    <MultiBinding Converter="{StaticResource TriggerConverter}">
-                                                                        <Binding Path="DataContext.DiscussionViewModel.SelectUserForDiscussionCommand"
+                                                                    <Button.Command>
+                                                                        <MultiBinding Converter="{StaticResource TriggerConverter}">
+                                                                            <Binding Path="DataContext.DiscussionViewModel.SelectUserForDiscussionCommand"
                                                                              ElementName="mdMainBackground" />
-                                                                        <Binding />
-                                                                    </MultiBinding>
-                                                                </Button.Command>
-                                                                <StackPanel>
-                                                                    <TextBlock Text="{Binding TxtLogin}"/>
-                                                                </StackPanel>
-                                                            </Button>
-                                                            <Button Grid.Column="2" Style="{DynamicResource MaterialDesignFlatButton}" ToolTip="Delete Discussion"
+                                                                            <Binding />
+                                                                        </MultiBinding>
+                                                                    </Button.Command>
+                                                                    <StackPanel>
+                                                                        <TextBlock Text="{Binding TxtLogin}"/>
+                                                                    </StackPanel>
+                                                                </Button>
+                                                                <Button Grid.Column="2" Style="{DynamicResource MaterialDesignFlatButton}" ToolTip="Delete Discussion"
                                                                     CommandParameter="{Binding}">
-                                                                <Button.Command>
-                                                                    <MultiBinding Converter="{StaticResource TriggerConverter}">
-                                                                        <Binding Path="DataContext.DiscussionViewModel.DeleteDiscussionCommand"
+                                                                    <Button.Command>
+                                                                        <MultiBinding Converter="{StaticResource TriggerConverter}">
+                                                                            <Binding Path="DataContext.DiscussionViewModel.DeleteDiscussionCommand"
                                                                              ElementName="mdMainBackground" />
-                                                                        <Binding />
-                                                                    </MultiBinding>
-                                                                </Button.Command>
-                                                                <materialDesign:PackIcon Kind="DeleteForever" Foreground="{Binding Background, ElementName=mdMainBackground}"/>
-                                                            </Button>
-                                                        </Grid>
-                                                        <TextBlock Text="{Binding TxtComment, Converter={StaticResource discussionGroupConverter}}" TextWrapping="Wrap" Foreground="DarkGray"/>
-                                                    </StackPanel>
-                                                </DataTemplate>
-                                            </DataGridTemplateColumn.CellTemplate>
-                                        </DataGridTemplateColumn>
-                                    </DataGrid.Columns>
-                                </DataGrid>
+                                                                            <Binding />
+                                                                        </MultiBinding>
+                                                                    </Button.Command>
+                                                                    <materialDesign:PackIcon Kind="DeleteForever" Foreground="{Binding Background, ElementName=mdMainBackground}"/>
+                                                                </Button>
+                                                            </Grid>
+                                                            <TextBlock Text="{Binding TxtComment, Converter={StaticResource discussionGroupConverter}}" TextWrapping="Wrap" Foreground="DarkGray"/>
+                                                        </StackPanel>
+                                                    </DataTemplate>
+                                                </DataGridTemplateColumn.CellTemplate>
+                                            </DataGridTemplateColumn>
+                                        </DataGrid.Columns>
+                                    </DataGrid>
 
-                                <DataGrid Name="dgUserGroupList" AutoGenerateColumns="False"  ItemsSource="{Binding DiscussionViewModel.UserGroupList, UpdateSourceTrigger=PropertyChanged}"
+                                    <DataGrid Name="dgUserGroupList" AutoGenerateColumns="False"  ItemsSource="{Binding DiscussionViewModel.UserGroupList, UpdateSourceTrigger=PropertyChanged}"
                                   CanUserAddRows="False">
-                                    <DataGrid.Columns>
-                                        <DataGridTemplateColumn>
-                                            <DataGridTemplateColumn.CellTemplate>
-                                                <DataTemplate>
-                                                    <Button Style="{DynamicResource MaterialDesignFlatButton}"
+                                        <DataGrid.Columns>
+                                            <DataGridTemplateColumn>
+                                                <DataGridTemplateColumn.CellTemplate>
+                                                    <DataTemplate>
+                                                        <Button Style="{DynamicResource MaterialDesignFlatButton}"
                                                             Command="{Binding DataContext.DiscussionViewModel.selectDiscussionGroupCommand, ElementName=mdMainBackground}"
                                                             CommandParameter="{Binding}">
-                                                        <Grid>
-                                                            <Grid.ColumnDefinitions>
-                                                                <ColumnDefinition Width="2*"/>
-                                                                <ColumnDefinition Width="*"/>
-                                                            </Grid.ColumnDefinitions>
-                                                            <TextBlock Text="{Binding Converter={StaticResource ResourceKey=discussionGroupConverter}}" HorizontalAlignment="Left"/>
-                                                            <Button Grid.Column="1" Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Right" ToolTip="Delete Discussion"
+                                                            <Grid>
+                                                                <Grid.ColumnDefinitions>
+                                                                    <ColumnDefinition Width="2*"/>
+                                                                    <ColumnDefinition Width="*"/>
+                                                                </Grid.ColumnDefinitions>
+                                                                <TextBlock Text="{Binding Converter={StaticResource ResourceKey=discussionGroupConverter}}" HorizontalAlignment="Left"/>
+                                                                <Button Grid.Column="1" Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Right" ToolTip="Delete Discussion"
                                                                     CommandParameter="{Binding}">
-                                                                <Button.Command>
-                                                                    <MultiBinding Converter="{StaticResource TriggerConverter}">
-                                                                        <Binding Path="DataContext.DiscussionViewModel.DeleteGroupDiscussionCommand"
+                                                                    <Button.Command>
+                                                                        <MultiBinding Converter="{StaticResource TriggerConverter}">
+                                                                            <Binding Path="DataContext.DiscussionViewModel.DeleteGroupDiscussionCommand"
                                                                              ElementName="mdMainBackground" />
-                                                                        <Binding />
-                                                                    </MultiBinding>
-                                                                </Button.Command>
-                                                                <materialDesign:PackIcon Kind="DeleteForever"/>
-                                                            </Button>
-                                                        </Grid>
-                                                    </Button>
-                                                </DataTemplate>
-                                            </DataGridTemplateColumn.CellTemplate>
-                                        </DataGridTemplateColumn>
-                                    </DataGrid.Columns>
-                                </DataGrid>
-                            </StackPanel>
+                                                                            <Binding />
+                                                                        </MultiBinding>
+                                                                    </Button.Command>
+                                                                    <materialDesign:PackIcon Kind="DeleteForever"/>
+                                                                </Button>
+                                                            </Grid>
+                                                        </Button>
+                                                    </DataTemplate>
+                                                </DataGridTemplateColumn.CellTemplate>
+                                            </DataGridTemplateColumn>
+                                        </DataGrid.Columns>
+                                    </DataGrid>
+                                </StackPanel>
+                            </ScrollViewer>
                         </DockPanel>
                     </materialDesign:DrawerHost.LeftDrawerContent>
                     <DockPanel>
